# sxc-gtk4

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  example-0.c  example-1.c  example-2.c  example-3.c  example-4.c
src/example-5/: CMakeLists.txt  example_app.c  example_app.gresource.xml  example_app.h  example_app_prefs.c  example_app_prefs.h  example_app_win.c  example_app_win.h  gears-menu.ui  main.c  org.gtk.exampleapp.gschema.xml  prefs.ui  window.ui
ui/: builder.ui
